--- a/jupyter/contador.ipynb
+++ b/jupyter/contador.ipynb
@@ -1005,7 +1005,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.5 (default, Jul 28 2020, 12:59:40) \n[GCC 9.3.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
